bkool/initial/src/main/bkool/parser/.antlr/MiniPHPParser.py
# Generated from d:\PPL\bkool\initial\src\main\bkool\parser\MiniPHP.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniPHPParser ( Parser ):

    grammarFileName = "MiniPHP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'array'", "'='", "';'", "'('", "')'", 
                     "','", "'=>'", "'**'", "'.'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'?'" ]

    symbolicNames = [ "<INVALID>", "ARRAY", "EQ", "SEMI", "LP", "RP", "COMMA", 
                      "ARROW", "DSTAR", "DOT", "MUL", "DIV", "MOD", "ADD", 
                      "SUB", "DQUES", "PAIRNAME", "VARNAME", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_variableDeclaration = 1
    RULE_array = 2
    RULE_indexedArray = 3
    RULE_indexedArrayPrime = 4
    RULE_associativeArray = 5
    RULE_associativeArrayPrime = 6
    RULE_associativePair = 7
    RULE_expression = 8
    RULE_operand = 9

    ruleNames =  [ "program", "variableDeclaration", "array", "indexedArray", 
                   "indexedArrayPrime", "associativeArray", "associativeArrayPrime", 
                   "associativePair", "expression", "operand" ]

    EOF = Token.EOF
    ARRAY=1
    EQ=2
    SEMI=3
    LP=4
    RP=5
    COMMA=6
    ARROW=7
    DSTAR=8
    DOT=9
    MUL=10
    DIV=11
    MOD=12
    ADD=13
    SUB=14
    DQUES=15
    PAIRNAME=16
    VARNAME=17
    INTLIT=18
    FLOATLIT=19
    STRINGLIT=20
    WS=21
    ERROR_CHAR=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniPHPParser.EOF, 0)

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniPHPParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniPHPParser.VariableDeclarationContext,i)


        def getRuleIndex(self):
            return MiniPHPParser.RULE_program




    def program(self):

        localctx = MiniPHPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.variableDeclaration()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MiniPHPParser.VARNAME):
                    break

            self.state = 25
            self.match(MiniPHPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(MiniPHPParser.VARNAME, 0)

        def EQ(self):
            return self.getToken(MiniPHPParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniPHPParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(MiniPHPParser.SEMI, 0)

        def getRuleIndex(self):
            return MiniPHPParser.RULE_variableDeclaration




    def variableDeclaration(self):

        localctx = MiniPHPParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(MiniPHPParser.VARNAME)
            self.state = 28
            self.match(MiniPHPParser.EQ)
            self.state = 29
            self.expression(0)
            self.state = 30
            self.match(MiniPHPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def indexedArray(self):
            return self.getTypedRuleContext(MiniPHPParser.IndexedArrayContext,0)


        def associativeArray(self):
            return self.getTypedRuleContext(MiniPHPParser.AssociativeArrayContext,0)


        def getRuleIndex(self):
            return MiniPHPParser.RULE_array




    def array(self):

        localctx = MiniPHPParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array)
        try:
            self.state = 34
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.indexedArray()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.associativeArray()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexedArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MiniPHPParser.ARRAY, 0)

        def LP(self):
            return self.getToken(MiniPHPParser.LP, 0)

        def indexedArrayPrime(self):
            return self.getTypedRuleContext(MiniPHPParser.IndexedArrayPrimeContext,0)


        def RP(self):
            return self.getToken(MiniPHPParser.RP, 0)

        def getRuleIndex(self):
            return MiniPHPParser.RULE_indexedArray




    def indexedArray(self):

        localctx = MiniPHPParser.IndexedArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_indexedArray)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(MiniPHPParser.ARRAY)
                self.state = 37
                self.match(MiniPHPParser.LP)
                self.state = 38
                self.indexedArrayPrime()
                self.state = 39
                self.match(MiniPHPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self.match(MiniPHPParser.ARRAY)
                self.state = 42
                self.match(MiniPHPParser.LP)
                self.state = 43
                self.match(MiniPHPParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexedArrayPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MiniPHPParser.ExpressionContext,0)


        def COMMA(self):
            return self.getToken(MiniPHPParser.COMMA, 0)

        def indexedArrayPrime(self):
            return self.getTypedRuleContext(MiniPHPParser.IndexedArrayPrimeContext,0)


        def getRuleIndex(self):
            return MiniPHPParser.RULE_indexedArrayPrime




    def indexedArrayPrime(self):

        localctx = MiniPHPParser.IndexedArrayPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_indexedArrayPrime)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.expression(0)
                self.state = 47
                self.match(MiniPHPParser.COMMA)
                self.state = 48
                self.indexedArrayPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociativeArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MiniPHPParser.ARRAY, 0)

        def LP(self):
            return self.getToken(MiniPHPParser.LP, 0)

        def associativeArrayPrime(self):
            return self.getTypedRuleContext(MiniPHPParser.AssociativeArrayPrimeContext,0)


        def RP(self):
            return self.getToken(MiniPHPParser.RP, 0)

        def getRuleIndex(self):
            return MiniPHPParser.RULE_associativeArray




    def associativeArray(self):

        localctx = MiniPHPParser.AssociativeArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_associativeArray)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(MiniPHPParser.ARRAY)
                self.state = 54
                self.match(MiniPHPParser.LP)
                self.state = 55
                self.associativeArrayPrime()
                self.state = 56
                self.match(MiniPHPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(MiniPHPParser.ARRAY)
                self.state = 59
                self.match(MiniPHPParser.LP)
                self.state = 60
                self.match(MiniPHPParser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociativeArrayPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def associativePair(self):
            return self.getTypedRuleContext(MiniPHPParser.AssociativePairContext,0)


        def COMMA(self):
            return self.getToken(MiniPHPParser.COMMA, 0)

        def associativeArrayPrime(self):
            return self.getTypedRuleContext(MiniPHPParser.AssociativeArrayPrimeContext,0)


        def getRuleIndex(self):
            return MiniPHPParser.RULE_associativeArrayPrime




    def associativeArrayPrime(self):

        localctx = MiniPHPParser.AssociativeArrayPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_associativeArrayPrime)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.associativePair()
                self.state = 64
                self.match(MiniPHPParser.COMMA)
                self.state = 65
                self.associativeArrayPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.associativePair()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssociativePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PAIRNAME(self):
            return self.getToken(MiniPHPParser.PAIRNAME, 0)

        def ARROW(self):
            return self.getToken(MiniPHPParser.ARROW, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniPHPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniPHPParser.RULE_associativePair




    def associativePair(self):

        localctx = MiniPHPParser.AssociativePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_associativePair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(MiniPHPParser.PAIRNAME)
            self.state = 71
            self.match(MiniPHPParser.ARROW)
            self.state = 72
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self):
            return self.getTypedRuleContext(MiniPHPParser.OperandContext,0)


        def DSTAR(self):
            return self.getToken(MiniPHPParser.DSTAR, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniPHPParser.ExpressionContext,0)


        def LP(self):
            return self.getToken(MiniPHPParser.LP, 0)

        def RP(self):
            return self.getToken(MiniPHPParser.RP, 0)

        def DOT(self):
            return self.getToken(MiniPHPParser.DOT, 0)

        def MUL(self):
            return self.getToken(MiniPHPParser.MUL, 0)

        def DIV(self):
            return self.getToken(MiniPHPParser.DIV, 0)

        def MOD(self):
            return self.getToken(MiniPHPParser.MOD, 0)

        def ADD(self):
            return self.getToken(MiniPHPParser.ADD, 0)

        def SUB(self):
            return self.getToken(MiniPHPParser.SUB, 0)

        def DQUES(self):
            return self.getToken(MiniPHPParser.DQUES, 0)

        def getRuleIndex(self):
            return MiniPHPParser.RULE_expression



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniPHPParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 75
                self.operand()
                self.state = 76
                self.match(MiniPHPParser.DSTAR)
                self.state = 77
                self.expression(7)
                pass

            elif la_ == 2:
                self.state = 79
                self.match(MiniPHPParser.LP)
                self.state = 80
                self.expression(0)
                self.state = 81
                self.match(MiniPHPParser.RP)
                pass

            elif la_ == 3:
                self.state = 83
                self.operand()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 98
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = MiniPHPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 87
                        self.match(MiniPHPParser.DOT)
                        self.state = 88
                        self.operand()
                        pass

                    elif la_ == 2:
                        localctx = MiniPHPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 90
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniPHPParser.MUL) | (1 << MiniPHPParser.DIV) | (1 << MiniPHPParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 91
                        self.operand()
                        pass

                    elif la_ == 3:
                        localctx = MiniPHPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 93
                        _la = self._input.LA(1)
                        if not(_la==MiniPHPParser.ADD or _la==MiniPHPParser.SUB):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self.operand()
                        pass

                    elif la_ == 4:
                        localctx = MiniPHPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 96
                        self.match(MiniPHPParser.DQUES)
                        self.state = 97
                        self.operand()
                        pass

             
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(MiniPHPParser.VARNAME, 0)

        def INTLIT(self):
            return self.getToken(MiniPHPParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MiniPHPParser.FLOATLIT, 0)

        def STRINGLIT(self):
            return self.getToken(MiniPHPParser.STRINGLIT, 0)

        def array(self):
            return self.getTypedRuleContext(MiniPHPParser.ArrayContext,0)


        def getRuleIndex(self):
            return MiniPHPParser.RULE_operand




    def operand(self):

        localctx = MiniPHPParser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_operand)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniPHPParser.VARNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(MiniPHPParser.VARNAME)
                pass
            elif token in [MiniPHPParser.INTLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(MiniPHPParser.INTLIT)
                pass
            elif token in [MiniPHPParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.match(MiniPHPParser.FLOATLIT)
                pass
            elif token in [MiniPHPParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.match(MiniPHPParser.STRINGLIT)
                pass
            elif token in [MiniPHPParser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         




